hydroflow/tests/compile-fail/surface_source_iter_badtype.stderr
error[E0277]: `()` is not an iterator
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:21
  |
5 |         source_iter(()) -> for_each(std::mem::drop);
  |         ------------^^-
  |         |           |
  |         |           `()` is not an iterator
  |         required by a bound introduced by this call
  |
  = help: the trait `Iterator` is not implemented for `()`, which is required by `(): IntoIterator`
  = note: required for `()` to implement `IntoIterator`
note: required by a bound in `check_iter`
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:9
  |
5 |         source_iter(()) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^ required by this bound in `check_iter`

error[E0277]: `()` is not an iterator
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:9
  |
5 |         source_iter(()) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^ `()` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `()`, which is required by `(): IntoIterator`
  = note: required for `()` to implement `IntoIterator`
note: required by a bound in `check_iter`
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:9
  |
5 |         source_iter(()) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^ required by this bound in `check_iter`

error[E0277]: `()` is not an iterator
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:9
  |
5 |         source_iter(()) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `()`, which is required by `(): IntoIterator`
  = note: required for `()` to implement `IntoIterator`
note: required by a bound in `check_iter`
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:9
  |
5 |         source_iter(()) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^ required by this bound in `check_iter`
